src/test/ui/borrowck/slice-index-bounds-check-invalidation.stderr
error[E0510]: cannot mutably borrow {$place_desc} in 
  --> $DIR/slice-index-bounds-check-invalidation.rs:36:12
   |
LL |     x[1][{ x = y; 2}]
   |     ----   ^^^^^ cannot mutably borrow
   |     |
   |     value is immutable in 

error[E0510]: cannot mutably borrow {$place_desc} in 
  --> $DIR/slice-index-bounds-check-invalidation.rs:50:12
   |
LL |     x[1][{ x = y; 2}]
   |     ----   ^^^^^ cannot mutably borrow
   |     |
   |     value is immutable in 

error[E0510]: cannot mutably borrow {$place_desc} in 
  --> $DIR/slice-index-bounds-check-invalidation.rs:64:12
   |
LL |     x[1][{ x = y; 2}][0]
   |     ----   ^^^^^ cannot mutably borrow
   |     |
   |     value is immutable in 

error[E0510]: cannot mutably borrow {$place_desc} in 
  --> $DIR/slice-index-bounds-check-invalidation.rs:71:12
   |
LL |     x[1][{ x = y; 2}][0]
   |     ----   ^^^^^ cannot mutably borrow
   |     |
   |     value is immutable in 

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0510`.
